# opengl-cpp

./: .gitignore  CMakeLists.txt  Makefile
dependencies/glad/: glad.h
src/: camera.cpp  camera.h  config.cpp  config.h  cube.cpp  cube.h  glad.c  linear_algebra.cpp  linear_algebra.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
src/components/: camera_component.h
src/controller/: app.cpp  app.h
src/factories/: factory.cpp  factory.h  mesh_factory.cpp  mesh_factory.h
src/model/: camera.cpp  camera.h  cube.cpp  cube.h  scene.cpp  scene.h
src/shaders/: fragment.glsl  vertex.glsl
src/systems/: animation_system.cpp  animation_system.h  camera_system.cpp  camera_system.h  motion_system.cpp  motion_system.h  render_system.cpp  render_system.h
src/view/: cube_mesh.cpp  cube_mesh.h  material.cpp  material.h  renderer.cpp  renderer.h  shader.cpp
